<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_checkoutreturn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/checkoutreturn_textView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/title_checkout"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="visible" />
        <LinearLayout
            android:id="@+id/layout_studentIDbookID"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout_StudentID"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/StudentID_TextView"
                    android:layout_width="50dp"
                    android:layout_height="46dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="@string/StudentID"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
                <EditText
                    android:id="@+id/edittext_studentID"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number|text"
                    android:text="@string/StudentID" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_BookID"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">
                <TextView
                    android:id="@+id/bookID_TextView"
                    android:layout_width="143dp"
                    android:layout_height="46dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:gravity="right"
                    android:text="@string/BookID_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
                <EditText
                    android:id="@+id/edittext_bookID"
                    android:layout_width="313dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/BookID"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_DatePicker"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Date_textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />
            <DatePicker
                android:id="@+id/datePicker1"
                style="@android:style/Widget.DatePicker"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="5dp"
                android:addStatesFromChildren="false"
                android:alwaysDrawnWithCache="false"
                android:animateLayoutChanges="false"
                android:animationCache="false"
                android:calendarViewShown="false"
                android:clickable="true"
                android:clipToPadding="true"
                android:datePickerMode="spinner"
                android:endYear="2100"
                android:fitsSystemWindows="true"
                android:maxDate="12/31/2100"
                android:minDate="01/01/2000"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="vertical"
                android:soundEffectsEnabled="true"
                android:spinnersShown="true"
                android:splitMotionEvents="true"
                android:startYear="2019"
                android:verticalScrollbarPosition="defaultPosition"
                android:visibility="visible"
                tools:visibility="visible"
                android:layout_marginStart="80dp"
                android:focusable="true" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/checkout_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/checkout" />
            <Button
                android:id="@+id/return_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="120dp"
                android:gravity="center"
                android:text="@string/bookreturn"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_summary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/summary_btn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/summary" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_BTMP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/goBack.btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/goback" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
